# rounds

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  pyright_output.txt  tasks.txt  test_sqlglot.py
analytics/: admin.py  agent_tools.py  agentic_qa.py  ambiguity.py  api.py  apps.py  chat_schemas.py  chat_service.py  llm.py  models.py  schema.py  test_chat_api.py  test_schema.py  tracing.py
analytics/management/commands/: analytics_chat.py
analytics/migrations/: 0001_initial.py
config/: api.py  middleware.py  settings.py  test_settings.py  urls.py
db/init/: 01_schema.sql
first-bolt-app/: README.md  app.py  manifest.json  requirements.txt
first-bolt-app/.slack/: config.json  hooks.json
observability/: models.py
slack_assistant/: apps.py  persistence.py  test_persistence.py  test_run_slack_assistant_command.py
slack_assistant/management/commands/: run_slack_assistant.py
tests/: test_request_response_logging.py
tests/analytics/: test_agentic_qa.py  test_ambiguity.py  test_analytics_chat_command.py  test_chat_api.py  test_llm.py  test_schema.py
tests/slack_assistant/: test_run_slack_assistant_command.py
